some styles added to navbar

--- a/index.html
+++ b/index.html
@@ -6,6 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Penguin Fashion</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <header class="bg-[#FFFBF0]">
+      <div class="max-w-[342px] lg:max-w-[1168px] my-0 mx-auto">
+        <!-- Navbar -->
+        <nav
+          class="flex justify-between items-center pt-[27px] pb-[52px] lg:pt-[39px] lg:pb-[102px]"
+        >
+          <div class="w-[192.75px] lg:w-[291px]">
+            <img src="icons/logo.png" alt="" />
+          </div>
+          <ul class="hidden lg:flex lg:gap-[57px]">
+            <li><a href="">Home</a></li>
+            <li><a href="">Product</a></li>
+            <li><a href="">About us</a></li>
+            <li><a href="">Contact</a></li>
+          </ul>
+          <img class="block lg:hidden" src="icons/Group.png" alt="" />
+        </nav>
+        <!-- Banner -->
+        <div class="">
+          <div class="">
+            <h1>Be the Penguins of Winter</h1>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+            <button>Buy now</button>
+          </div>
+          <div class="">
+            <img src="images/model.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
