banner and navbar style added with responsive design

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img src="icons/logo.png" alt="" />
           </div>
           <ul
-            class="hidden lg:flex lg:gap-[57px] font-medium text-base text-[#3C3C3C]/[1.5rem]"
+            class="hidden lg:flex lg:gap-[57px] font-medium text-base text-[#3C3C3C] leading-[1.5rem]"
           >
             <li><a href="">Home</a></li>
             <li><a href="">Product</a></li>
@@ -42,17 +42,30 @@
           <img class="block lg:hidden" src="icons/Group.png" alt="" />
         </nav>
         <!-- Banner -->
-        <div class="">
-          <div class="">
-            <h1>Be the Penguins of Winter</h1>
-            <p>
+        <div
+          class="pb-11 md:flex md:justify-between md:items-center md:pb-[130px]"
+        >
+          <div class="w-[312px] md:w-[416px]">
+            <h1 class="text-6xl md:text-[5rem] font-bebas-neue uppercase">
+              <span class="text-[#FABE4C]">Be the Penguins</span><br /><span
+                class="text-[#363958]"
+                >of Winter</span
+              >
+            </h1>
+            <p class="text-base leading-[1.625rem] text-[#3E3E3E] mb-6 md:mb-2">
               Lorem Ipsum is simply dummy text of the printing and typesetting
               industry.
             </p>
-            <button>Buy now</button>
+
+            <button
+              class="flex gap-2 items-center uppercase text-base py-[18px] px-[34px] bg-linear-to-r from-[#A4BC46] to-[#85A019] text-[#FFFFFF] rounded-[10px] mb-10 md:mb-0"
+            >
+              <img class="h-6 w-6" src="icons/shopping-cart 1.png" alt="" />
+              Buy now
+            </button>
           </div>
           <div class="">
-            <img src="images/model.png" alt="" />
+            <img class="w-[100%]" src="images/model.png" alt="" />
           </div>
         </div>
       </div>
