--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
   </head>
   <body class="font-roboto">
     <header class="bg-[#FFFBF0]">
-      <div class="max-w-[342px] lg:max-w-[1168px] my-0 mx-auto">
+      <div
+        class="max-w-[342px] md:max-w-[700px] lg:max-w-[1168px] my-0 mx-auto"
+      >
         <!-- Navbar -->
         <nav
           class="flex justify-between items-center pt-[27px] pb-[52px] lg:pt-[39px] lg:pb-[102px]"
@@ -46,13 +48,15 @@
           class="pb-11 md:flex md:justify-between md:items-center md:pb-[130px]"
         >
           <div class="w-[312px] md:w-[416px]">
-            <h1 class="text-6xl md:text-[5rem] font-bebas-neue uppercase">
+            <h1 class="text-6xl lg:text-[5rem] font-bebas-neue uppercase">
               <span class="text-[#FABE4C]">Be the Penguins</span><br /><span
                 class="text-[#363958]"
                 >of Winter</span
               >
             </h1>
-            <p class="text-base leading-[1.625rem] text-[#3E3E3E] mb-6 md:mb-2">
+            <p
+              class="text-base leading-[1.625rem] text-[#3E3E3E] mb-6 mt-2 lg:mb-4"
+            >
               Lorem Ipsum is simply dummy text of the printing and typesetting
               industry.
             </p>
