Card section added with responsive design

--- a/index.html
+++ b/index.html
@@ -74,7 +74,188 @@
         </div>
       </div>
     </header>
-    <main></main>
+    <main>
+      <div class="max-w-[342px] md:max-w-[700px] lg:max-w-[1168px] mx-auto">
+        <!-- Woman Jacket's Section -->
+        <section>
+          <h3
+            class="uppercase text-[#363958] font-bebas-neue text-4xl pt-[50px] pb-[29px] text-center lg:text-start lg:text-5xl"
+          >
+            Woman Jacket
+          </h3>
+          <div
+            class="grid grid-cols-1 gap-y-[30px] md:grid-cols-2 lg:grid-cols-3 gap-x-[30px] pb-[99px]"
+          >
+            <div
+              class="card p-[18px] rounded-[20px] space-y-[17px] bg-[#FFFFFF] shadow-[0px_10px_30px_rgba(0,0,0,0.05)]"
+            >
+              <img
+                class="p-6 rounded-3xl bg-[#F1F1F1]"
+                src="images/jacket-1.png"
+                alt=""
+              />
+
+              <h5 class="font-bold text-2xl text-[#363958]">
+                Yellow Coat Jacket
+              </h5>
+              <p class="text-base leading-[26px] text-[#3E3E3E]">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+              <div class="flex justify-between items-center">
+                <p class="text-[#FABE4C] text-4xl font-black">$234</p>
+                <button
+                  class="flex gap-2 items-center uppercase text-base py-[18px] px-[34px] bg-linear-to-r from-[#A4BC46] to-[#85A019] text-[#FFFFFF] rounded-[10px]"
+                >
+                  <img class="h-6 w-6" src="icons/shopping-cart 1.png" alt="" />
+                  Buy now
+                </button>
+              </div>
+            </div>
+            <div
+              class="card p-[18px] rounded-[20px] space-y-[17px] bg-[#FFFFFF] shadow-[0px_10px_30px_rgba(0,0,0,0.05)]"
+            >
+              <img
+                class="p-6 rounded-3xl bg-[#F1F1F1]"
+                src="images/jacket-2.png"
+                alt=""
+              />
+
+              <h5 class="font-bold text-2xl text-[#363958]">Ladies Jacket</h5>
+              <p class="text-base leading-[26px] text-[#3E3E3E]">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+              <div class="flex justify-between items-center">
+                <p class="text-[#FABE4C] text-4xl font-black">$234</p>
+                <button
+                  class="flex gap-2 items-center uppercase text-base py-[18px] px-[34px] bg-linear-to-r from-[#A4BC46] to-[#85A019] text-[#FFFFFF] rounded-[10px]"
+                >
+                  <img class="h-6 w-6" src="icons/shopping-cart 1.png" alt="" />
+                  Buy now
+                </button>
+              </div>
+            </div>
+            <div
+              class="card p-[18px] rounded-[20px] space-y-[17px] bg-[#FFFFFF] shadow-[0px_10px_30px_rgba(0,0,0,0.05)]"
+            >
+              <img
+                class="p-6 rounded-3xl bg-[#F1F1F1]"
+                src="images/jacket-3.png"
+                alt=""
+              />
+
+              <h5 class="font-bold text-2xl text-[#363958]">
+                Woman Leather Jacket
+              </h5>
+              <p class="text-base leading-[26px] text-[#3E3E3E]">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+              <div class="flex justify-between items-center">
+                <p class="text-[#FABE4C] text-4xl font-black">$234</p>
+                <button
+                  class="flex gap-2 items-center uppercase text-base py-[18px] px-[34px] bg-linear-to-r from-[#A4BC46] to-[#85A019] text-[#FFFFFF] rounded-[10px]"
+                >
+                  <img class="h-6 w-6" src="icons/shopping-cart 1.png" alt="" />
+                  Buy now
+                </button>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- Man Jacket's Section -->
+        <section>
+          <h3
+            class="uppercase text-[#363958] font-bebas-neue text-4xl pt-[50px] pb-[29px] text-center lg:text-start lg:text-5xl"
+          >
+            Man Jacket
+          </h3>
+          <div
+            class="grid grid-cols-1 gap-y-[30px] md:grid-cols-2 lg:grid-cols-3 gap-x-[30px] pb-[99px]"
+          >
+            <div
+              class="card p-[18px] rounded-[20px] space-y-[17px] bg-[#FFFFFF] shadow-[0px_10px_30px_rgba(0,0,0,0.05)]"
+            >
+              <img
+                class="p-6 rounded-3xl bg-[#F1F1F1]"
+                src="images/jacket-4.png"
+                alt=""
+              />
+
+              <h5 class="font-bold text-2xl text-[#363958]">
+                Snowboard Jacket Mens
+              </h5>
+              <p class="text-base leading-[26px] text-[#3E3E3E]">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+              <div class="flex justify-between items-center">
+                <p class="text-[#FABE4C] text-4xl font-black">$234</p>
+                <button
+                  class="flex gap-2 items-center uppercase text-base py-[18px] px-[34px] bg-linear-to-r from-[#A4BC46] to-[#85A019] text-[#FFFFFF] rounded-[10px]"
+                >
+                  <img class="h-6 w-6" src="icons/shopping-cart 1.png" alt="" />
+                  Buy now
+                </button>
+              </div>
+            </div>
+            <div
+              class="card p-[18px] rounded-[20px] space-y-[17px] bg-[#FFFFFF] shadow-[0px_10px_30px_rgba(0,0,0,0.05)]"
+            >
+              <img
+                class="p-6 rounded-3xl bg-[#F1F1F1]"
+                src="images/jacket-5.png"
+                alt=""
+              />
+
+              <h5 class="font-bold text-2xl text-[#363958]">
+                Man Leather Jackets
+              </h5>
+              <p class="text-base leading-[26px] text-[#3E3E3E]">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+              <div class="flex justify-between items-center">
+                <p class="text-[#FABE4C] text-4xl font-black">$234</p>
+                <button
+                  class="flex gap-2 items-center uppercase text-base py-[18px] px-[34px] bg-linear-to-r from-[#A4BC46] to-[#85A019] text-[#FFFFFF] rounded-[10px]"
+                >
+                  <img class="h-6 w-6" src="icons/shopping-cart 1.png" alt="" />
+                  Buy now
+                </button>
+              </div>
+            </div>
+            <div
+              class="card p-[18px] rounded-[20px] space-y-[17px] bg-[#FFFFFF] shadow-[0px_10px_30px_rgba(0,0,0,0.05)]"
+            >
+              <img
+                class="p-6 rounded-3xl bg-[#F1F1F1]"
+                src="images/jacket-6.png"
+                alt=""
+              />
+
+              <h5 class="font-bold text-2xl text-[#363958]">
+                Man Casual Jackets
+              </h5>
+              <p class="text-base leading-[26px] text-[#3E3E3E]">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+              <div class="flex justify-between items-center">
+                <p class="text-[#FABE4C] text-4xl font-black">$234</p>
+                <button
+                  class="flex gap-2 items-center uppercase text-base py-[18px] px-[34px] bg-linear-to-r from-[#A4BC46] to-[#85A019] text-[#FFFFFF] rounded-[10px]"
+                >
+                  <img class="h-6 w-6" src="icons/shopping-cart 1.png" alt="" />
+                  Buy now
+                </button>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
     <footer></footer>
   </body>
 </html>
