about section added with responsive design

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             Man Jacket
           </h3>
           <div
-            class="grid grid-cols-1 gap-y-[30px] md:grid-cols-2 lg:grid-cols-3 gap-x-[30px] pb-[99px]"
+            class="grid grid-cols-1 gap-y-[30px] md:grid-cols-2 lg:grid-cols-3 gap-x-[30px] pb-[94px] lg:pb-[99px]"
           >
             <div
               class="card p-[18px] rounded-[20px] space-y-[17px] bg-[#FFFFFF] shadow-[0px_10px_30px_rgba(0,0,0,0.05)]"
@@ -250,6 +250,57 @@
                   <img class="h-6 w-6" src="icons/shopping-cart 1.png" alt="" />
                   Buy now
                 </button>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- About us -->
+        <section
+          class="flex flex-col gap-[48px] md:flex-row-reverse md:justify-between items-center pb-[200px] pt-9"
+        >
+          <div class="w-[300px] md:w-[600px]">
+            <img class="w-full" src="images/shopping.png" alt="" />
+          </div>
+          <div class="grid grid-cols-1 gap-4">
+            <div
+              class="flex flex-col md:flex-row py-5 px-7 items-center gap-4 justify-center md:justify-between bg-[#FFFFFF] rounded-[20px] shadow-lg"
+            >
+              <img class="w-[78px]" src="icons/house.png" alt="" />
+              <div class="space-y-[12px] text-center md:text-start">
+                <h5 class="font-bold text-2xl text-[#363958]">
+                  Find the Perfect Fit
+                </h5>
+                <p class="text-base leading-[26px] text-[#3E3E3E]">
+                  Everybody is different, which is why we offer styles for every
+                  body.
+                </p>
+              </div>
+            </div>
+            <div
+              class="flex flex-col md:flex-row py-5 px-7 items-center gap-4 justify-center md:justify-between bg-[#FFFFFF] rounded-[20px] shadow-lg"
+            >
+              <img class="w-[78px]" src="icons/box.png" alt="" />
+              <div class="space-y-[12px] text-center md:text-start">
+                <h5 class="font-bold text-2xl text-[#363958]">
+                  Free Exchanges
+                </h5>
+                <p class="text-base leading-[26px] text-[#3E3E3E]">
+                  One of the many reasons you can shop with peace of mind.
+                </p>
+              </div>
+            </div>
+            <div
+              class="flex flex-col md:flex-row py-5 px-7 items-center gap-4 justify-center md:justify-between bg-[#FFFFFF] rounded-[20px] shadow-lg"
+            >
+              <img class="w-[78px]" src="icons/question.png" alt="" />
+              <div class="space-y-[12px] text-center md:text-start">
+                <h5 class="font-bold text-2xl text-[#363958]">
+                  Contact Our Seller
+                </h5>
+                <p class="text-base leading-[26px] text-[#3E3E3E]">
+                  They are here to help you. That's quite literally what we pay
+                  them for.
+                </p>
               </div>
             </div>
           </div>
