--- a/index.html
+++ b/index.html
@@ -256,14 +256,14 @@
         </section>
         <!-- About us -->
         <section
-          class="flex flex-col gap-[48px] md:flex-row-reverse md:justify-between items-center pb-[200px] pt-9"
+          class="flex flex-col gap-[48px] lg:flex-row-reverse lg:justify-between items-center pb-[200px] pt-9"
         >
-          <div class="w-[300px] md:w-[600px]">
+          <div class="w-[300px] lg:w-[600px]">
             <img class="w-full" src="images/shopping.png" alt="" />
           </div>
           <div class="grid grid-cols-1 gap-4">
             <div
-              class="flex flex-col md:flex-row py-5 px-7 items-center gap-4 justify-center md:justify-between bg-[#FFFFFF] rounded-[20px] shadow-lg"
+              class="flex flex-col md:flex-row py-5 px-7 items-center gap-x-4 justify-center md:justify-between bg-[#FFFFFF] rounded-[20px] shadow-lg"
             >
               <img class="w-[78px]" src="icons/house.png" alt="" />
               <div class="space-y-[12px] text-center md:text-start">
@@ -276,8 +276,9 @@
                 </p>
               </div>
             </div>
+
             <div
-              class="flex flex-col md:flex-row py-5 px-7 items-center gap-4 justify-center md:justify-between bg-[#FFFFFF] rounded-[20px] shadow-lg"
+              class="flex flex-col md:flex-row py-5 px-7 items-center gap-x-4 justify-center md:justify-between bg-[#FFFFFF] rounded-[20px] shadow-lg"
             >
               <img class="w-[78px]" src="icons/box.png" alt="" />
               <div class="space-y-[12px] text-center md:text-start">
@@ -285,12 +286,13 @@
                   Free Exchanges
                 </h5>
                 <p class="text-base leading-[26px] text-[#3E3E3E]">
-                  One of the many reasons you can shop with peace of mind.
+                  They are here to help you. That's quite literally what we pay
+                  them for.
                 </p>
               </div>
             </div>
             <div
-              class="flex flex-col md:flex-row py-5 px-7 items-center gap-4 justify-center md:justify-between bg-[#FFFFFF] rounded-[20px] shadow-lg"
+              class="flex flex-col md:flex-row py-5 px-7 items-center gap-x-4 justify-center md:justify-between bg-[#FFFFFF] rounded-[20px] shadow-lg"
             >
               <img class="w-[78px]" src="icons/question.png" alt="" />
               <div class="space-y-[12px] text-center md:text-start">
