animation added to the navbar lists

--- a/index.html
+++ b/index.html
@@ -36,10 +36,26 @@
           <ul
             class="hidden lg:flex lg:gap-[57px] font-medium text-base text-[#3C3C3C] leading-[1.5rem]"
           >
-            <li><a href="">Home</a></li>
-            <li><a href="">Product</a></li>
-            <li><a href="">About us</a></li>
-            <li><a href="">Contact</a></li>
+            <li
+              class="pb-1 relative after:content-[''] after:absolute after:left-0 after:bottom-0 after:h-0.75 after:w-0 after:transition-[width] after:duration-500 after:ease-in-out after:bg-black hover:after:w-full hover:text-black hover:font-bold"
+            >
+              <a href="">Home</a>
+            </li>
+            <li
+              class="pb-1 relative after:content-[''] after:absolute after:left-0 after:bottom-0 after:h-0.75 after:w-0 after:transition-[width] after:duration-500 after:ease-in-out after:bg-black hover:after:w-full hover:text-black hover:font-bold"
+            >
+              <a href="">Product</a>
+            </li>
+            <li
+              class="pb-1 relative after:content-[''] after:absolute after:left-0 after:bottom-0 after:h-0.75 after:w-0 after:transition-[width] after:duration-500 after:ease-in-out after:bg-black hover:after:w-full hover:text-black hover:font-bold"
+            >
+              <a href="">About us</a>
+            </li>
+            <li
+              class="pb-1 relative after:content-[''] after:absolute after:left-0 after:bottom-0 after:h-0.75 after:w-0 after:transition-[width] after:duration-500 after:ease-in-out after:bg-black hover:after:w-full hover:text-black hover:font-bold"
+            >
+              <a href="">Contact</a>
+            </li>
           </ul>
           <img class="block lg:hidden" src="icons/Group.png" alt="" />
         </nav>
